force-app/main/default/objects/Referral_Relationship__c/Referral_Relationship__c.object-meta.xml
<CustomObject>
    <label>Referral Relationship</label>
    <nameField>
        <label>Referral Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>