force-app/main/default/objects/Referral_Relationship__c/fields/Affiliate_Code__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Code__c</fullName>
    <label>Affiliate Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>