force-app/main/default/objects/Referral_Relationship__c/fields/Created_On__c.field-meta.xml
<CustomField>
    <fullName>Created_On__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Created On</label>
    <type>DateTime</type>
</CustomField>