force-app/main/default/objects/Referral_Relationship__c/fields/Partnered_On__c.field-meta.xml
<CustomField>
    <fullName>Partnered_On__c</fullName>
    <label>Partnered On</label>
    <type>Date</type>
</CustomField>