force-app/main/default/objects/Referral_Relationship__c/fields/Partnership_Stage__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Stage__c</fullName>
    <label>Partnership Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Deal</fullName>
            </value>
            <value>
                <fullName>Demoing</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Partnered</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>