force-app/main/default/objects/Referral_Relationship__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Tier 2 Partner</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>