force-app/main/default/objects/Referral_Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>SaaS Vendor</fullName>
            </value>
            <value>
                <fullName>Agency Vendor</fullName>
            </value>
            <value>
                <fullName>Other Vendor</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Purchased Leads</fullName>
            </value>
            <value>
                <fullName>Dazos Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>