force-app/main/default/objects/Referral_Relationship__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Email_Address__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Affiliate_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>